pcat.output
Terminals unused in grammar

   TRUE
   FALSE
   IN
   OUT
   BACKSLASH


语法

    0 $accept: program $end

    1 program: PROGRAM IS body ';'
    2        | error

    3 body: declarations PROGRAMBEGIN statements END

    4 declarations: declarations declaration
    5             | %empty

    6 statements: statements statement
    7           | %empty

    8 declaration: VAR var_decls
    9            | TYPE type_decls
   10            | PROCEDURE procedure_decls

   11 var_decls: var_decls var_decl
   12          | %empty

   13 type_decls: type_decls type_decl
   14           | %empty

   15 procedure_decls: procedure_decls procedure_decl
   16                | %empty

   17 var_decl: ID ids ASSIGN expression ';'
   18         | ID ids ':' type ASSIGN expression ';'
   19         | error ';'

   20 ids: ids ',' ID
   21    | %empty

   22 type_decl: ID IS type ';'
   23          | error ';'

   24 procedure_decl: ID formal_params IS body ';'
   25               | ID formal_params ':' type IS body ';'

   26 type: ID
   27     | ARRAY OF type
   28     | RECORD component components END

   29 components: components component
   30           | %empty

   31 component: ID ':' type ';'

   32 formal_params: '(' fp_section fp_sections ')'
   33              | '(' ')'

   34 fp_sections: fp_sections ';' fp_section
   35            | %empty

   36 fp_section: ID ids ':' type

   37 statement: lvalue ASSIGN expression ';'
   38          | ID actual_params ';'
   39          | READ '(' lvalue lvalues ')' ';'
   40          | WRITE write_params ';'
   41          | IF expression THEN statements elsifs END ';'
   42          | IF expression THEN statements elsifs ELSE statements END ';'
   43          | WHILE expression DO statements END ';'
   44          | LOOP statements END ';'
   45          | FOR ID ASSIGN expression TO expression DO statements END ';'
   46          | FOR ID ASSIGN expression TO expression BY expression DO statements END ';'
   47          | EXIT ';'
   48          | RETURN ';'
   49          | RETURN expression ';'
   50          | error ';'

   51 lvalues: lvalues ',' lvalue
   52        | %empty

   53 elsifs: elsifs elsif
   54       | %empty

   55 elsif: ELSIF expression THEN statements

   56 write_params: '(' write_expr write_exprs ')'
   57             | '(' ')'

   58 write_exprs: write_exprs ',' write_expr
   59            | %empty

   60 write_expr: STRING
   61           | expression

   62 expression: number
   63           | lvalue
   64           | '(' expression ')'
   65           | '+' expression
   66           | '-' expression
   67           | NOT expression
   68           | expression '*' expression
   69           | expression '/' expression
   70           | expression AND expression
   71           | expression DIV expression
   72           | expression MOD expression
   73           | expression '+' expression
   74           | expression '-' expression
   75           | expression OR expression
   76           | expression '>' expression
   77           | expression '<' expression
   78           | expression '=' expression
   79           | expression GE expression
   80           | expression LE expression
   81           | expression NE expression
   82           | ID actual_params
   83           | ID comp_values
   84           | ID array_values

   85 lvalue: ID
   86       | lvalue '[' expression ']'
   87       | lvalue '.' ID

   88 actual_params: '(' expression expressions ')'
   89              | '(' ')'

   90 expressions: expressions ',' expression
   91            | %empty

   92 comp_values: '{' ID ASSIGN expression assign_expression_to_id_s '}'

   93 assign_expression_to_id_s: assign_expression_to_id_s ';' ID ASSIGN expression
   94                          | %empty

   95 array_values: LBRACKET array_value comma_sep_array_values RBRACKET

   96 comma_sep_array_values: comma_sep_array_values ',' array_value
   97                       | %empty

   98 array_value: expression
   99            | expression OF expression

  100 number: INTEGER
  101       | REAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 32 33 39 56 57 64 88 89
')' (41) 32 33 39 56 57 64 88 89
'*' (42) 68
'+' (43) 65 73
',' (44) 20 51 58 90 96
'-' (45) 66 74
'.' (46) 87
'/' (47) 69
':' (58) 18 25 31 36
';' (59) 1 17 18 19 22 23 24 25 31 34 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 93
'<' (60) 77
'=' (61) 78
'>' (62) 76
'[' (91) 86
']' (93) 86
'{' (123) 92
'}' (125) 92
error (256) 2 19 23 50
INTEGER (258) 100
REAL (259) 101
STRING (260) 60
ID (261) 17 18 20 22 24 25 26 31 36 38 45 46 82 83 84 85 87 92 93
TRUE (262)
FALSE (263)
ARRAY (264) 27
PROGRAMBEGIN (265) 3
BY (266) 46
DO (267) 43 45 46
ELSE (268) 42
ELSIF (269) 55
END (270) 3 28 41 42 43 44 45 46
FOR (271) 45 46
IF (272) 41 42
IN (273)
IS (274) 1 22 24 25
LOOP (275) 44
OF (276) 27 99
OUT (277)
PROCEDURE (278) 10
PROGRAM (279) 1
READ (280) 39
RECORD (281) 28
THEN (282) 41 42 55
TO (283) 45 46
TYPE (284) 9
VAR (285) 8
WHILE (286) 43
WRITE (287) 40
EXIT (288) 47
RETURN (289) 48 49
LBRACKET (290) 95
RBRACKET (291) 95
BACKSLASH (292)
ASSIGN (293) 17 18 37 45 46 92 93
NOT (294) 67
LE (295) 80
GE (296) 79
NE (297) 81
OR (298) 75
MOD (299) 72
DIV (300) 71
AND (301) 70
UNARY (302)


Nonterminals, with rules where they appear

$accept (65)
    左： 0
program (66)
    左： 1 2, 右： 0
body (67)
    左： 3, 右： 1 24 25
declarations (68)
    左： 4 5, 右： 3 4
statements (69)
    左： 6 7, 右： 3 6 41 42 43 44 45 46 55
declaration (70)
    左： 8 9 10, 右： 4
var_decls (71)
    左： 11 12, 右： 8 11
type_decls (72)
    左： 13 14, 右： 9 13
procedure_decls (73)
    左： 15 16, 右： 10 15
var_decl (74)
    左： 17 18 19, 右： 11
ids (75)
    左： 20 21, 右： 17 18 20 36
type_decl (76)
    左： 22 23, 右： 13
procedure_decl (77)
    左： 24 25, 右： 15
type (78)
    左： 26 27 28, 右： 18 22 25 27 31 36
components (79)
    左： 29 30, 右： 28 29
component (80)
    左： 31, 右： 28 29
formal_params (81)
    左： 32 33, 右： 24 25
fp_sections (82)
    左： 34 35, 右： 32 34
fp_section (83)
    左： 36, 右： 32 34
statement (84)
    左： 37 38 39 40 41 42 43 44 45 46 47 48 49 50, 右： 6
lvalues (85)
    左： 51 52, 右： 39 51
elsifs (86)
    左： 53 54, 右： 41 42 53
elsif (87)
    左： 55, 右： 53
write_params (88)
    左： 56 57, 右： 40
write_exprs (89)
    左： 58 59, 右： 56 58
write_expr (90)
    左： 60 61, 右： 56 58
expression (91)
    左： 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84, 右： 17 18 37 41 42 43 45 46 49 55 61 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 80 81 86 88 90 92 93 98 99
lvalue (92)
    左： 85 86 87, 右： 37 39 51 63 86 87
actual_params (93)
    左： 88 89, 右： 38 82
expressions (94)
    左： 90 91, 右： 88 90
comp_values (95)
    左： 92, 右： 83
assign_expression_to_id_s (96)
    左： 93 94, 右： 92 93
array_values (97)
    左： 95, 右： 84
comma_sep_array_values (98)
    左： 96 97, 右： 95 96
array_value (99)
    左： 98 99, 右： 95 96
number (100)
    左： 100 101, 右： 62


State 0

    0 $accept: . program $end
    1 program: . PROGRAM IS body ';'
    2        | . error

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    program  转到状态 3


State 1

    2 program: error .

    $default  reduce using rule 2 (program)


State 2

    1 program: PROGRAM . IS body ';'

    IS  shift, and go to state 4


State 3

    0 $accept: program . $end

    $end  shift, and go to state 5


State 4

    1 program: PROGRAM IS . body ';'
    3 body: . declarations PROGRAMBEGIN statements END
    4 declarations: . declarations declaration
    5             | . %empty

    $default  reduce using rule 5 (declarations)

    body          转到状态 6
    declarations  转到状态 7


State 5

    0 $accept: program $end .

    $default  接受


State 6

    1 program: PROGRAM IS body . ';'

    ';'  shift, and go to state 8


State 7

    3 body: declarations . PROGRAMBEGIN statements END
    4 declarations: declarations . declaration
    8 declaration: . VAR var_decls
    9            | . TYPE type_decls
   10            | . PROCEDURE procedure_decls

    PROGRAMBEGIN  shift, and go to state 9
    PROCEDURE     shift, and go to state 10
    TYPE          shift, and go to state 11
    VAR           shift, and go to state 12

    declaration  转到状态 13


State 8

    1 program: PROGRAM IS body ';' .

    $default  reduce using rule 1 (program)


State 9

    3 body: declarations PROGRAMBEGIN . statements END
    6 statements: . statements statement
    7           | . %empty

    $default  reduce using rule 7 (statements)

    statements  转到状态 14


State 10

   10 declaration: PROCEDURE . procedure_decls
   15 procedure_decls: . procedure_decls procedure_decl
   16                | . %empty

    $default  reduce using rule 16 (procedure_decls)

    procedure_decls  转到状态 15


State 11

    9 declaration: TYPE . type_decls
   13 type_decls: . type_decls type_decl
   14           | . %empty

    $default  reduce using rule 14 (type_decls)

    type_decls  转到状态 16


State 12

    8 declaration: VAR . var_decls
   11 var_decls: . var_decls var_decl
   12          | . %empty

    $default  reduce using rule 12 (var_decls)

    var_decls  转到状态 17


State 13

    4 declarations: declarations declaration .

    $default  reduce using rule 4 (declarations)


State 14

    3 body: declarations PROGRAMBEGIN statements . END
    6 statements: statements . statement
   37 statement: . lvalue ASSIGN expression ';'
   38          | . ID actual_params ';'
   39          | . READ '(' lvalue lvalues ')' ';'
   40          | . WRITE write_params ';'
   41          | . IF expression THEN statements elsifs END ';'
   42          | . IF expression THEN statements elsifs ELSE statements END ';'
   43          | . WHILE expression DO statements END ';'
   44          | . LOOP statements END ';'
   45          | . FOR ID ASSIGN expression TO expression DO statements END ';'
   46          | . FOR ID ASSIGN expression TO expression BY expression DO statements END ';'
   47          | . EXIT ';'
   48          | . RETURN ';'
   49          | . RETURN expression ';'
   50          | . error ';'
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID

    error   shift, and go to state 18
    ID      shift, and go to state 19
    END     shift, and go to state 20
    FOR     shift, and go to state 21
    IF      shift, and go to state 22
    LOOP    shift, and go to state 23
    READ    shift, and go to state 24
    WHILE   shift, and go to state 25
    WRITE   shift, and go to state 26
    EXIT    shift, and go to state 27
    RETURN  shift, and go to state 28

    statement  转到状态 29
    lvalue     转到状态 30


State 15

   10 declaration: PROCEDURE procedure_decls .  [PROGRAMBEGIN, PROCEDURE, TYPE, VAR]
   15 procedure_decls: procedure_decls . procedure_decl
   24 procedure_decl: . ID formal_params IS body ';'
   25               | . ID formal_params ':' type IS body ';'

    ID  shift, and go to state 31

    $default  reduce using rule 10 (declaration)

    procedure_decl  转到状态 32


State 16

    9 declaration: TYPE type_decls .  [PROGRAMBEGIN, PROCEDURE, TYPE, VAR]
   13 type_decls: type_decls . type_decl
   22 type_decl: . ID IS type ';'
   23          | . error ';'

    error  shift, and go to state 33
    ID     shift, and go to state 34

    PROGRAMBEGIN  reduce using rule 9 (declaration)
    PROCEDURE     reduce using rule 9 (declaration)
    TYPE          reduce using rule 9 (declaration)
    VAR           reduce using rule 9 (declaration)

    type_decl  转到状态 35


State 17

    8 declaration: VAR var_decls .  [PROGRAMBEGIN, PROCEDURE, TYPE, VAR]
   11 var_decls: var_decls . var_decl
   17 var_decl: . ID ids ASSIGN expression ';'
   18         | . ID ids ':' type ASSIGN expression ';'
   19         | . error ';'

    error  shift, and go to state 36
    ID     shift, and go to state 37

    PROGRAMBEGIN  reduce using rule 8 (declaration)
    PROCEDURE     reduce using rule 8 (declaration)
    TYPE          reduce using rule 8 (declaration)
    VAR           reduce using rule 8 (declaration)

    var_decl  转到状态 38


State 18

   50 statement: error . ';'

    ';'  shift, and go to state 39


State 19

   38 statement: ID . actual_params ';'
   85 lvalue: ID .  ['.', '[', ASSIGN]
   88 actual_params: . '(' expression expressions ')'
   89              | . '(' ')'

    '('  shift, and go to state 40

    $default  reduce using rule 85 (lvalue)

    actual_params  转到状态 41


State 20

    3 body: declarations PROGRAMBEGIN statements END .

    $default  reduce using rule 3 (body)


State 21

   45 statement: FOR . ID ASSIGN expression TO expression DO statements END ';'
   46          | FOR . ID ASSIGN expression TO expression BY expression DO statements END ';'

    ID  shift, and go to state 42


State 22

   41 statement: IF . expression THEN statements elsifs END ';'
   42          | IF . expression THEN statements elsifs ELSE statements END ';'
   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 50
    lvalue      转到状态 51
    number      转到状态 52


State 23

    6 statements: . statements statement
    7           | . %empty
   44 statement: LOOP . statements END ';'

    $default  reduce using rule 7 (statements)

    statements  转到状态 53


State 24

   39 statement: READ . '(' lvalue lvalues ')' ';'

    '('  shift, and go to state 54


State 25

   43 statement: WHILE . expression DO statements END ';'
   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 55
    lvalue      转到状态 51
    number      转到状态 52


State 26

   40 statement: WRITE . write_params ';'
   56 write_params: . '(' write_expr write_exprs ')'
   57             | . '(' ')'

    '('  shift, and go to state 56

    write_params  转到状态 57


State 27

   47 statement: EXIT . ';'

    ';'  shift, and go to state 58


State 28

   48 statement: RETURN . ';'
   49          | RETURN . expression ';'
   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    ';'      shift, and go to state 59
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 60
    lvalue      转到状态 51
    number      转到状态 52


State 29

    6 statements: statements statement .

    $default  reduce using rule 6 (statements)


State 30

   37 statement: lvalue . ASSIGN expression ';'
   86 lvalue: lvalue . '[' expression ']'
   87       | lvalue . '.' ID

    '.'     shift, and go to state 61
    '['     shift, and go to state 62
    ASSIGN  shift, and go to state 63


State 31

   24 procedure_decl: ID . formal_params IS body ';'
   25               | ID . formal_params ':' type IS body ';'
   32 formal_params: . '(' fp_section fp_sections ')'
   33              | . '(' ')'

    '('  shift, and go to state 64

    formal_params  转到状态 65


State 32

   15 procedure_decls: procedure_decls procedure_decl .

    $default  reduce using rule 15 (procedure_decls)


State 33

   23 type_decl: error . ';'

    ';'  shift, and go to state 66


State 34

   22 type_decl: ID . IS type ';'

    IS  shift, and go to state 67


State 35

   13 type_decls: type_decls type_decl .

    $default  reduce using rule 13 (type_decls)


State 36

   19 var_decl: error . ';'

    ';'  shift, and go to state 68


State 37

   17 var_decl: ID . ids ASSIGN expression ';'
   18         | ID . ids ':' type ASSIGN expression ';'
   20 ids: . ids ',' ID
   21    | . %empty

    $default  reduce using rule 21 (ids)

    ids  转到状态 69


State 38

   11 var_decls: var_decls var_decl .

    $default  reduce using rule 11 (var_decls)


State 39

   50 statement: error ';' .

    $default  reduce using rule 50 (statement)


State 40

   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
   88 actual_params: '(' . expression expressions ')'
   89              | '(' . ')'
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    ')'      shift, and go to state 70
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 71
    lvalue      转到状态 51
    number      转到状态 52


State 41

   38 statement: ID actual_params . ';'

    ';'  shift, and go to state 72


State 42

   45 statement: FOR ID . ASSIGN expression TO expression DO statements END ';'
   46          | FOR ID . ASSIGN expression TO expression BY expression DO statements END ';'

    ASSIGN  shift, and go to state 73


State 43

  100 number: INTEGER .

    $default  reduce using rule 100 (number)


State 44

  101 number: REAL .

    $default  reduce using rule 101 (number)


State 45

   82 expression: ID . actual_params
   83           | ID . comp_values
   84           | ID . array_values
   85 lvalue: ID .  [BY, DO, OF, THEN, TO, RBRACKET, ';', ',', '.', ')', '[', ']', '}', LE, GE, NE, '<', '>', '=', OR, '+', '-', '*', '/', MOD, DIV, AND]
   88 actual_params: . '(' expression expressions ')'
   89              | . '(' ')'
   92 comp_values: . '{' ID ASSIGN expression assign_expression_to_id_s '}'
   95 array_values: . LBRACKET array_value comma_sep_array_values RBRACKET

    LBRACKET  shift, and go to state 74
    '('       shift, and go to state 40
    '{'       shift, and go to state 75

    $default  reduce using rule 85 (lvalue)

    actual_params  转到状态 76
    comp_values    转到状态 77
    array_values   转到状态 78


State 46

   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   64           | '(' . expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 79
    lvalue      转到状态 51
    number      转到状态 52


State 47

   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   67           | NOT . expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 80
    lvalue      转到状态 51
    number      转到状态 52


State 48

   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   65           | '+' . expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 81
    lvalue      转到状态 51
    number      转到状态 52


State 49

   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   66           | '-' . expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 82
    lvalue      转到状态 51
    number      转到状态 52


State 50

   41 statement: IF expression . THEN statements elsifs END ';'
   42          | IF expression . THEN statements elsifs ELSE statements END ';'
   68 expression: expression . '*' expression
   69           | expression . '/' expression
   70           | expression . AND expression
   71           | expression . DIV expression
   72           | expression . MOD expression
   73           | expression . '+' expression
   74           | expression . '-' expression
   75           | expression . OR expression
   76           | expression . '>' expression
   77           | expression . '<' expression
   78           | expression . '=' expression
   79           | expression . GE expression
   80           | expression . LE expression
   81           | expression . NE expression

    THEN  shift, and go to state 83
    LE    shift, and go to state 84
    GE    shift, and go to state 85
    NE    shift, and go to state 86
    '<'   shift, and go to state 87
    '>'   shift, and go to state 88
    '='   shift, and go to state 89
    OR    shift, and go to state 90
    '+'   shift, and go to state 91
    '-'   shift, and go to state 92
    '*'   shift, and go to state 93
    '/'   shift, and go to state 94
    MOD   shift, and go to state 95
    DIV   shift, and go to state 96
    AND   shift, and go to state 97


State 51

   63 expression: lvalue .  [BY, DO, OF, THEN, TO, RBRACKET, ';', ',', ')', ']', '}', LE, GE, NE, '<', '>', '=', OR, '+', '-', '*', '/', MOD, DIV, AND]
   86 lvalue: lvalue . '[' expression ']'
   87       | lvalue . '.' ID

    '.'  shift, and go to state 61
    '['  shift, and go to state 62

    $default  reduce using rule 63 (expression)


State 52

   62 expression: number .

    $default  reduce using rule 62 (expression)


State 53

    6 statements: statements . statement
   37 statement: . lvalue ASSIGN expression ';'
   38          | . ID actual_params ';'
   39          | . READ '(' lvalue lvalues ')' ';'
   40          | . WRITE write_params ';'
   41          | . IF expression THEN statements elsifs END ';'
   42          | . IF expression THEN statements elsifs ELSE statements END ';'
   43          | . WHILE expression DO statements END ';'
   44          | . LOOP statements END ';'
   44          | LOOP statements . END ';'
   45          | . FOR ID ASSIGN expression TO expression DO statements END ';'
   46          | . FOR ID ASSIGN expression TO expression BY expression DO statements END ';'
   47          | . EXIT ';'
   48          | . RETURN ';'
   49          | . RETURN expression ';'
   50          | . error ';'
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID

    error   shift, and go to state 18
    ID      shift, and go to state 19
    END     shift, and go to state 98
    FOR     shift, and go to state 21
    IF      shift, and go to state 22
    LOOP    shift, and go to state 23
    READ    shift, and go to state 24
    WHILE   shift, and go to state 25
    WRITE   shift, and go to state 26
    EXIT    shift, and go to state 27
    RETURN  shift, and go to state 28

    statement  转到状态 29
    lvalue     转到状态 30


State 54

   39 statement: READ '(' . lvalue lvalues ')' ';'
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID

    ID  shift, and go to state 99

    lvalue  转到状态 100


State 55

   43 statement: WHILE expression . DO statements END ';'
   68 expression: expression . '*' expression
   69           | expression . '/' expression
   70           | expression . AND expression
   71           | expression . DIV expression
   72           | expression . MOD expression
   73           | expression . '+' expression
   74           | expression . '-' expression
   75           | expression . OR expression
   76           | expression . '>' expression
   77           | expression . '<' expression
   78           | expression . '=' expression
   79           | expression . GE expression
   80           | expression . LE expression
   81           | expression . NE expression

    DO   shift, and go to state 101
    LE   shift, and go to state 84
    GE   shift, and go to state 85
    NE   shift, and go to state 86
    '<'  shift, and go to state 87
    '>'  shift, and go to state 88
    '='  shift, and go to state 89
    OR   shift, and go to state 90
    '+'  shift, and go to state 91
    '-'  shift, and go to state 92
    '*'  shift, and go to state 93
    '/'  shift, and go to state 94
    MOD  shift, and go to state 95
    DIV  shift, and go to state 96
    AND  shift, and go to state 97


State 56

   56 write_params: '(' . write_expr write_exprs ')'
   57             | '(' . ')'
   60 write_expr: . STRING
   61           | . expression
   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    STRING   shift, and go to state 102
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    ')'      shift, and go to state 103
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    write_expr  转到状态 104
    expression  转到状态 105
    lvalue      转到状态 51
    number      转到状态 52


State 57

   40 statement: WRITE write_params . ';'

    ';'  shift, and go to state 106


State 58

   47 statement: EXIT ';' .

    $default  reduce using rule 47 (statement)


State 59

   48 statement: RETURN ';' .

    $default  reduce using rule 48 (statement)


State 60

   49 statement: RETURN expression . ';'
   68 expression: expression . '*' expression
   69           | expression . '/' expression
   70           | expression . AND expression
   71           | expression . DIV expression
   72           | expression . MOD expression
   73           | expression . '+' expression
   74           | expression . '-' expression
   75           | expression . OR expression
   76           | expression . '>' expression
   77           | expression . '<' expression
   78           | expression . '=' expression
   79           | expression . GE expression
   80           | expression . LE expression
   81           | expression . NE expression

    ';'  shift, and go to state 107
    LE   shift, and go to state 84
    GE   shift, and go to state 85
    NE   shift, and go to state 86
    '<'  shift, and go to state 87
    '>'  shift, and go to state 88
    '='  shift, and go to state 89
    OR   shift, and go to state 90
    '+'  shift, and go to state 91
    '-'  shift, and go to state 92
    '*'  shift, and go to state 93
    '/'  shift, and go to state 94
    MOD  shift, and go to state 95
    DIV  shift, and go to state 96
    AND  shift, and go to state 97


State 61

   87 lvalue: lvalue '.' . ID

    ID  shift, and go to state 108


State 62

   62 expression: . number
   63           | . lvalue
   64           | . '(' expression ')'
   65           | . '+' expression
   66           | . '-' expression
   67           | . NOT expression
   68           | . expression '*' expression
   69           | . expression '/' expression
   70           | . expression AND expression
   71           | . expression DIV expression
   72           | . expression MOD expression
   73           | . expression '+' expression
   74           | . expression '-' expression
   75           | . expression OR expression
   76           | . expression '>' expression
   77           | . expression '<' expression
   78           | . expression '=' expression
   79           | . expression GE expression
   80           | . expression LE expression
   81           | . expression NE expression
   82           | . ID actual_params
   83           | . ID comp_values
   84           | . ID array_values
   85 lvalue: . ID
   86       | . lvalue '[' expression ']'
   86       | lvalue '[' . expression ']'
   87       | . lvalue '.' ID
  100 number: . INTEGER
  101       | . REAL

    INTEGER  shift, and go to state 43
    REAL     shift, and go to state 44
    ID       shift, and go to state 45
    '('      shift, and go to state 46
    NOT      shift, and go to state 47
    '+'      shift, and go to state 48
    '-'      shift, and go to state 49

    expression  转到状态 109
    lvalue      转到状态 51
    number      转到状态 52


State 63
